discussion/kv_engine/170345/170345_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move JSON validation to FrontEndThread member

Previously we had the JSON validator as a member in the
FrontEndThread struct, and everyone who wanted to use
it could use it the way they wanted.

This patch refactor this to a member function:

    bool isValidJson(Cookie& cookie, std::string_view view);

The member function adds a trace span and updates the bucket
histogram for the validation time.

Call the same method from subdoc validation instead of
creating a new validator every time we need one.

Change-Id: I7e29ceecb6eee3abf2a1d6ee2c339f1c0b0d2206

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-09 11:01:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-09 11:23:54.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15429/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:213:5: error: use of undeclared identifier "ScopeTimer" [clang-diagnostic-error]
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:213:52: error: expected ";" after expression [clang-diagnostic-error]
    ScopeTimer<HdrMicroSecStopwatch, SpanStopwatch> timer(
                                                   ^
                                                   ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:215:55: error: member access into incomplete type "Bucket" [clang-diagnostic-error]
                    cookie.getConnection().getBucket().jsonValidateTimes),
                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/sendbuffer.h:15:7: note: forward declaration of "Bucket"
class Bucket;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15429/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/thread.cc:213:5:
error: use of undeclared identifier "ScopeTimer" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15429/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36871/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/thread.cc:213:52:
error: expected ";" after expression
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36871/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16246/ : FAILURE

Failure of GoogleTest "TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
[2022-02-09T11:13:20.451Z] unknown file: Failure
[2022-02-09T11:13:20.451Z] C++ exception with description "Failed to store TransportProtocols_XattrTest_mb25928_SystemCantExceedSystemLimit_Mcbp_XattrYes_JsonYes_SnappyYes: Temporary failure (134)" thrown in SetUp().
[2022-02-09T11:13:20.451Z] [  FAILED  ] TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (1 ms)
TransportProtocols/XattrTest.mb25928_SystemCantExceedSystemLimit/Mcbp_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16246/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17158/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43701/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5079/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17467/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18206/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5137/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25565/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
